--- a/src/components/climaamanha/climaamanha.css
+++ b/src/components/climaamanha/climaamanha.css
@@ -24,10 +24,9 @@
     width: 100%;
 }
 
-.climaamanha-imagem {    
+.imagemamanha {
     position: relative;
     right: 35%;
-    margin-top: 10px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -45,10 +44,11 @@
     margin-top: 10%;
     display: flex;
     align-items: start;
-    justify-content: start;
+    justify-content:start;
     flex-direction: column;
+    gap: 10px;
     position: relative;
-    bottom: 15%;
+    bottom: 12%;
     left: 25%;
     width: 80%;
 }
@@ -93,7 +93,7 @@
     cursor: pointer;
     font-size: 1em;
     position: relative;
-    bottom: 30%;
+    bottom: 50%;
 }
   
 .toggle-chart-btn:hover {
@@ -102,10 +102,10 @@
 
 canvas {
     display: block;
-    width: 100% !important;
-    height: 300px !important;
+    width: 100%;
+    height: 300px;
     position: relative;
-    bottom: 30%;
+    bottom: 50%;
   }
   
 .imagemamanha {
