--- a/src/components/clima15d/clima15d.css
+++ b/src/components/clima15d/clima15d.css
@@ -11,10 +11,10 @@
     overflow-y: auto; 
     margin-left: 20%;
     margin-right: 20%;
-    max-width: 100%;
+    max-width: 90%;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     position: relative;
-    transition: height 0.3s ease-in-out; /* Suaviza a transição de altura */
+    transition: height 0.3s ease-in-out; 
     overflow: hidden; 
 }
 
@@ -118,6 +118,8 @@
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
     border-radius: 30px;
     background-color: #7FA1C3;
+    overflow-x: scroll;
+    white-space: nowrap;
 }
 
 .dia-previsao.expandido ul li {
