--- a/src/components/clima15d/clima15d.css
+++ b/src/components/clima15d/clima15d.css
@@ -43,7 +43,6 @@
     justify-content: center;
     align-items: center;
     position: relative;
-    right: 15%;
     background-color: rgb(194, 214, 236);
     color: black;
     width: 45%;
@@ -66,7 +65,7 @@
 
 .temperaturaexpandido {
     display: flex;
-    justify-content: start;
+    justify-content: center;
     align-items: center;
     flex-direction: column;
     gap: 0;
